# multi-cli

./: .gitignore  Cargo.toml  README.md  design.md
.claude/: CLAUDE.md
src/: app.rs  main.rs  shell_session.rs  terminal_buffer.rs  window_manager.rs
