[package]
name = "multi-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "multi-cli"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
portable-pty = "0.9"
vt100 = "0.15"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
walkdir = "2"

[profile.release]
opt-level = 3
